# ai-infra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  EXECUTOR-COMPLETED.md  EXECUTOR.md  Makefile  README.md  ROADMAP.md  SECURITY.md  cliff.toml  docs-changelog.json  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini
.executor/: report.json  report.md
.github/: settings.yml
.github/workflows/: api-docs.yml  ci.yml  feedback.md  integration.yml  publish-pypi.yml
benchmarks/: bench_embeddings.py  bench_executor_flow.py  bench_executor_performance.py  bench_llm.py  bench_orchestrator.py  conftest.py
docs/: README.md  agent.md  architecture.md  callbacks.md  cli.md  error-handling.md  getting-started.md  index.md  integration-patterns.md  memory.md  migration.md  performance.md  quickstart.md  realtime.md  security-audit.md  streaming.md  troubleshooting.md  validation.md
docs/api/: agent.json  audiooutput.json  cachinginterceptor.json  callbackmanager.json  callbacks.json  containsexpected.json  embeddings.json  graph.json  imagegen.json  lengthinrange.json  llm.json  loggingcallbacks.json  mcpclient.json  mcpsecuritysettings.json  mcpserver.json  memorystorage.json  memorystore.json  metricscallbacks.json  persona.json  printcallbacks.json  progressstream.json  providerregistry.json  ragfaithfulness.json  realtimevoice.json  retriever.json  semanticsimilarity.json  sqlitestorage.json  stt.json  toolusageevaluator.json  tracingcallbacks.json  tts.json  vectorstore.json  workflowrecorder.json  workspace.json
docs/core/: agents.md  graph.md  llm.md  providers.md
docs/embeddings/: embeddings.md  retriever.md  vectorstore.md
docs/executor/: autonomous-verification.md  graph-architecture.md  langgraph-studio.md  migration-guide.md  roadmap-format.md  streaming-consolidation.md  task-routing.md
docs/features/: deep-agent.md  personas.md  replay.md  workspace.md
docs/guides/: shell-security.md  shell-tool-guide.md
docs/imagegen/: imagegen.md
docs/infrastructure/: callbacks.md  errors.md  logging.md  tracing.md  validation.md
docs/mcp/: client.md  openapi.md  security-improvements.md  server.md
docs/multimodal/: realtime.md  stt.md  tts.md  vision.md
docs/reference/: api.md  experimental.md
docs/tools/: object-tools.md  progress.md  schema-tools.md  shell-middleware.md  shell-tool.md
examples/: README.md  pyproject.toml  quickstart.py
examples/agents/: 01_basic_tools.py  02_structured_tools.py  03_hitl.py  04_fallbacks.py  05_mcp_tools.py  06_deep_mode.py  07_subagents.py  08_personas.py  09_replay.py  10_workspace.py
examples/agents/personas/: analyst.yaml  developer.yaml  support.yaml
examples/chat/: 01_basic.py  02_streaming.py  03_structured_output.py  04_multi_provider.py  05_vision.py  06_conversation.py
examples/embeddings/: 01_basic.py  02_batch.py
examples/graph/: 01_basic_workflow.py  02_conditional.py  03_with_agent.py  04_parallel.py
examples/imagegen/: 01_basic.py
examples/mcp/: 01_client_basic.py  02_server_basic.py  03_openapi_to_mcp.py  04_agent_with_mcp.py
examples/memory/: 01_trim_messages.py  02_summarization.py  03_memory_store.py  04_conversation_memory.py  05_agent_with_memory.py  06_production_setup.py
examples/realtime/: 01_basic_voice.py  02_with_tools.py  03_explicit_provider.py  04_model_discovery.py  05_fastapi_integration.py
examples/retriever/: 01_basic.py  02_files.py  03_directory.py  04_sqlite.py  05_postgres.py  06_chroma.py  07_pinecone.py  08_advanced_search.py  09_with_agent.py  10_async.py
examples/tools/: 01_schema_tools.py  02_progress.py
examples/voice/: 01_tts_stt.py
quickstart/: basics.py  graph.py  mer.mermaid  open_mcp.py  server.py
quickstart/graphs/: __init__.py
quickstart/llm/: __init__.py
quickstart/mcp/: 01_mcps.py  01_multi_config.py  02_call_tool.py  03_openapi_mcp.py  test.py
quickstart/openmcp/: openmcp.py
scripts/: analyze_code_reduction.py  demo_cli.py  extract_api_docs.py  lint_file_size.py  test_mcp_callbacks.py  test_retriever_6_9.py  test_unified_callbacks_live.py  verify_registry.py
src/ai_infra/: __init__.py  callbacks.py  errors.py  logging.py  tracing.py
tests/: conftest.py  test_mcp_expose_core.py
tests/executor/: test_collaboration.py  test_command_history_parsing.py  test_context_carryover.py  test_context_carryover_reference.py  test_context_carryover_wiring.py  test_context_prewarming.py  test_context_summarizer.py  test_executor_verification.py  test_hitl_actions.py  test_human_collaboration.py  test_intelligent_task_handling.py  test_learning_integration.py  test_learning_memory.py  test_metrics.py  test_parallel_verification.py  test_patterns.py  test_pricing.py  test_progress.py  test_research_tools.py  test_routing.py  test_skill_extraction.py  test_skills.py  test_skills_cli.py  test_skills_injection.py  test_streaming.py  test_subagent_model_inheritance.py  test_subagent_spawning.py  test_subagent_token_tracking.py  test_token_streaming.py
tests/integration/: __init__.py  test_agent_tools.py  test_anthropic.py  test_coder_file_creation.py  test_embeddings.py  test_google_provider.py  test_mcp_client.py  test_mcp_server.py  test_openai.py  test_realtime_voice.py  test_shell_integration.py
tests/scenario/: test_project_scenarios.py
tests/unit/: test_agent_callbacks.py  test_errors.py  (+45 more)
(+576 files in other folders)
