[tool.poetry]
name = "ai-infra"
version = "0.1.2"
description = "Infrastructure for efficient and scalable AI applications."
authors = ["Ali Khatami <aliikhatami94@gmail.com>"]
readme = "README.md"
packages = [{ include = "ai_infra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.11"
langgraph = ">=0.6.4,<0.7.0"
python-dotenv = "^1.1.1"
langchain = "^0.3.27"
langchain-openai = "^0.3.29"
langchain-xai = "^0.2.5"
langchain-anthropic = "^0.3.18"
langchain-google-genai = "^2.1.9"
langchain-mcp-adapters = "^0.1.9"
langsmith = "^0.4.13"
fastapi = "^0.116.1"
fastmcp = "^2.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"