[tool.poetry]
name = "ai-infra"
version = "0.1.118"
description = "Infrastructure for efficient and scalable AI applications."
authors = ["Ali Khatami <aliikhatami94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ai_infra", from = "src" }]
keywords = ["ai", "langchain", "langgraph", "fastapi", "infra", "llm", "mcp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed"
]

[tool.poetry.urls]
Homepage = "https://github.com/your-org/ai-infra"
Repository = "https://github.com/your-org/ai-infra"
Issues = "https://github.com/your-org/ai-infra/issues"
Documentation = "https://github.com/your-org/ai-infra#readme"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Core AI/Infra
fastapi = "^0.116.1"
pydantic = "^2.11"
python-dotenv = "^1.1.1"

# LangChain ecosystem (v1)
langgraph = "^1.0.0"
langchain = "^1.0.0"
langchain-openai = "^1.0.0"
langchain-xai = "^1.0.0"
langchain-anthropic = "^1.0.0"
langchain-google-genai = "^3.0.0"
langchain-mcp-adapters = "^0.1.14"
langsmith = "^0.4.13"

# MCP integration
mcp = {extras = ["cli"], version = "^1.13.1"}
svc-infra = "^0.1.16"
pre-commit = "^4.3.0"

# Raw provider SDKs for models.list() discovery
google-genai = "^1.0.0"

# DeepAgents - autonomous agent orchestration (0.2.x adds backends module)
deepagents = "^0.2.0"

# Retriever backends (optional)
numpy = "^1.24.0"
langchain-text-splitters = "^0.3.8"
langchain-huggingface = "^1.1.0"
sentence-transformers = "^5.1.2"

[tool.poetry.extras]
# Retriever storage backends
postgres = ["pgvector", "psycopg2-binary"]
sqlite = ["sqlite-vss"]
chroma = ["chromadb"]
pinecone = ["pinecone-client"]
qdrant = ["qdrant-client"]
faiss = ["faiss-cpu"]
# File loaders
pdf = ["pypdf"]
docx = ["python-docx"]
html = ["beautifulsoup4"]
csv = ["pandas"]
# Free local embeddings (no API key needed)
local-embeddings = ["langchain-huggingface", "sentence-transformers"]
huggingface = ["langchain-huggingface", "sentence-transformers"]
# All retriever dependencies
retriever = ["pypdf", "python-docx", "beautifulsoup4", "pandas"]
retriever-all = ["pgvector", "psycopg2-binary", "chromadb", "pypdf", "python-docx", "beautifulsoup4", "pandas"]
retriever-local = ["langchain-huggingface", "sentence-transformers", "pypdf", "python-docx", "beautifulsoup4", "pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
ai-infra = "ai_infra.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
